--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".user.PhoneAuthenticationActivity"
             android:exported="true"/>
-        <activity android:name=".user.LoginActivity" />
+        <activity android:name=".user.LoginActivity" android:exported="true" />
         <activity android:name=".user.SignUpActivity"
             android:exported="true"/>
         <activity android:name=".MainActivity">
