- Convert the room created time to Time ago format,eg. 2 days ago - Change the title of the fragment when in Main Fragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,10 @@ dependencies {
     //image stuff
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+
+    implementation 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
+
+
 }
 repositories {
     mavenCentral()
