--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,8 +65,7 @@ dependencies {
     // firebase
     implementation 'com.google.firebase:firebase-messaging:20.1.0'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
-
-
+    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
 
 }
 repositories {
