--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.1"
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -21,10 +21,21 @@ android {
         enabled = true
     }
 
+    signingConfigs {
+        release {
+            storeFile file("C:\\Users\\RaidShou\\Desktop\\UpUpHere\\UpUpHere Android\\app\\upuphere-keystore.jks")
+            storePassword "upup159874"
+            keyAlias "upuphere-keystore"
+            keyPassword "upup159874"
+        }
+    }
+
     buildTypes {
         release {
+            zipAlignEnabled true
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
         debug {
