--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ ext.versionMajor = 1
 ext.versionMinor = 0
 ext.versionPatch = 3
 ext.versionClassifier = null
-ext.isSnapshot = true
+ext.isSnapshot = false
 ext.minimumSdkVersion = 21
 
 private Integer generateVersionCode() {
@@ -66,7 +66,7 @@ android {
                 // Set this flag to 'false' to disable @AddTrace annotation processing and
                 // automatic HTTP/S network request monitoring
                 // for a specific build variant at compile time.
-                instrumentationEnabled false
+                instrumentationEnabled true
             }
         }
     }
