--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ android {
                 // Set this flag to 'false' to disable @AddTrace annotation processing and
                 // automatic HTTP/S network request monitoring
                 // for a specific build variant at compile time.
-                instrumentationEnabled true
+                instrumentationEnabled false
             }
         }
     }
@@ -133,6 +133,8 @@ dependencies {
 
     implementation 'com.github.joielechong:countrycodepicker:2.4.1'
     implementation 'com.bigbangbutton:editcodeview:1.0.6'
+
+    implementation 'com.google.android.gms:play-services-ads:19.1.0'
 
 }
 repositories {
