--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'com.google.firebase.firebase-perf'
 
 ext.versionMajor = 1
-ext.versionMinor = 2
-ext.versionPatch = 3
+ext.versionMinor = 3
+ext.versionPatch = 0
 ext.versionClassifier = null
 ext.isSnapshot = false
 ext.minimumSdkVersion = 21
@@ -40,8 +40,8 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding = true
     }
 
     signingConfigs {
@@ -66,7 +66,7 @@ android {
                 // Set this flag to 'false' to disable @AddTrace annotation processing and
                 // automatic HTTP/S network request monitoring
                 // for a specific build variant at compile time.
-                instrumentationEnabled true
+                instrumentationEnabled false
             }
         }
     }
