--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,11 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.2'
+        classpath 'com.android.tools.build:gradle:4.0.1'
         classpath 'com.google.gms:google-services:4.3.3'
 
         // Crashlytics Gradle plugin.
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.0.0-beta02'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.2.0'
 
         //Firebase performance plugin
         classpath 'com.google.firebase:perf-plugin:1.3.1'
